samples/_failures_safe/1761699722_bed9ae_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6c871443.c: In function ‘main’:
./samples/SAFE/__tmp_6c871443.c:141:12: error: expected expression at end of input
  141 |     struct CompressionResult comp_result = compress_data(&ctx, test_data,
      |            ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_6c871443.c:141:12: error: expected declaration or statement at end of input
